feat(account): Add Holding — Account wizard closeout after Rémy greenlight 2026-05-16
